// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module renders a badge correctly 1`] = `
<div
  className="box paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap2 xsDirectionRow"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Text fontSize3 darkGray alignStart breakWord fontWeightBold truncate"
            title="Testing"
          >
            Testing
          </div>
        </div>
        <div
          className="FlexItem"
        >
          <div
            className="box marginStart2 relative"
            style={
              Object {
                "top": "1px",
              }
            }
          >
            <span
              className="Badge middle blueBg"
            >
              Try it out!
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="Text fontSize3 darkGray alignStart breakWord fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Module renders a title correctly 1`] = `
<div
  className="box paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap2 xsDirectionRow"
      >
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Text fontSize3 darkGray alignStart breakWord fontWeightBold truncate"
            title="Module Test"
          >
            Module Test
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    />
  </div>
</div>
`;

exports[`Module renders an error correctly 1`] = `
<div
  className="box paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap2 xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <svg
            aria-hidden={null}
            aria-label="locked"
            className="icon red iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Text fontSize3 red alignStart breakWord fontWeightBold truncate"
            title="Testing"
          >
            Testing
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="Text fontSize3 darkGray alignStart breakWord fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Module renders an icon correctly 1`] = `
<div
  className="box paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Flex rowGap2 xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <svg
            aria-hidden={null}
            aria-label="locked"
            className="icon darkGray iconBlock"
            height={16}
            role="img"
            viewBox="0 0 24 24"
            width={16}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
        <div
          className="FlexItem"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <div
            className="Text fontSize3 darkGray alignStart breakWord fontWeightBold truncate"
            title="Testing"
          >
            Testing
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div
        className="Text fontSize3 darkGray alignStart breakWord fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Module renders content correctly 1`] = `
<div
  className="box paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        className="Text fontSize3 darkGray alignStart breakWord fontWeightNormal"
      >
        Testing
      </div>
    </div>
  </div>
</div>
`;

exports[`Module renders the base correctly 1`] = `
<div
  className="box paddingX6 paddingY6 rounding4 shadow"
  id="module-test"
>
  <div
    className="Flex columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    />
  </div>
</div>
`;
